--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,13 @@
+{% extends 'base.html' %}
+
+{% block title %}Guess 2/3 - Login{% endblock %}
+
+{% block content %}
+
 <h2>Guess 2/3 Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+{% endblock %}
