--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,9 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}! Welcome to Guess 2/3!
+  <p>
+    <a href="{% url 'logout' %}">logout</a>
+  </p>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
