--- a/templates/home.html
+++ b/templates/home.html
@@ -11,5 +11,7 @@
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
+  <p>If you do not have account, please sign up here.</p>
+  <a href="{% url 'signup' %}">sign up</a>
 {% endif %}
 {% endblock %}
